--- a/src/components/buttons/operationBtn/OperationBtn.module.css
+++ b/src/components/buttons/operationBtn/OperationBtn.module.css
@@ -20,6 +20,7 @@
   color: #9999ff;
 }
 
+
 .col {
   display: flex;
   flex-direction: column;
@@ -30,4 +31,15 @@
 .icons {
   font-size: medium;
   color: #9999ff;
+}
+
+.equals {
+  margin-top: 0.5rem;
+  height: 2.5rem !important;
+  background: #9999ff !important;
+  color: #fff;
+}
+
+.equals:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset !important;
 }
